#480 - Allow POST /documents?artifactId=true, creates "root" document